Negative z-index stops events being received.

--- a/scss/controller.scss
+++ b/scss/controller.scss
@@ -16,7 +16,7 @@ body {
 }
 
 div.overlay {
-  z-index: 1;
+  z-index: 2;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -40,7 +40,7 @@ div.controller {
   right: 0;
   top: 0;
   bottom: 0;
-  z-index: -1;
+  z-index: 1;
 
   div.zone {
     position: absolute;
